update to hover issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -567,21 +567,21 @@ select:focus-visible{
   transition: 0.1s ease-in-out;
   position: relative;
 }
-.companies-container ul li:hover, .contacts-container ul li:hover{
+/* .companies-container ul li:hover, .contacts-container ul li:hover{
   transform: scale(102%);
   box-shadow: 0 0 0 .1rem blue;
   border: none;
-}
+} */
 /* .companies-mobile-click{
   transform: scale(102%);
   box-shadow: 0 0 0 .1rem blue;
   border: none;
 } */
-.companies-container ul li:hover .hidden-icons, .contacts-container ul li:hover .hidden-icons{
+/* .companies-container ul li:hover .hidden-icons, .contacts-container ul li:hover .hidden-icons{
   opacity: 1;
   pointer-events: all;
   visibility: visible;
-}
+} */
 .card.applied{
   border: 1px solid green;
   /* background: lightgreen; */
